--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
   <title>ColoRandom</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
     <h1>COLORANDOM</h1>
   </header>
-  <main class="color-box-container">
+  <main>
     <article>
       <figure class="color-box1"></figure>
       <figcaption>#EA9999</figcaption>
@@ -35,5 +35,8 @@
       <figcaption>#A4C4CA</figcaption>
     </article>
   </main>
+  <article class="color-button-container">
+    <button class="color-button">New Palette</button>
+  </article>
 </body>
 </html>
