Begin building out JS functionality

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <h1>COLORANDOM</h1>
   </header>
-  <main>
+  <main class="color-box-container">
     <article>
       <figure class="color-box1"></figure>
       <figcaption>#EA9999</figcaption>
