Display randomly displayed colors

--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
   <article class="color-button-container">
     <button class="color-button">New Palette</button>
   </article>
+  <script src="main.js"></script>
 </body>
 </html>
