Fix hex code label alignment

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <h1>COLORANDOM</h1>
   </header>
-  <main>
-    <article>
+  <main class="color-box-container">
+    <article class="color-box">
       <figure class="color-box1"></figure>
       <figcaption>#EA9999</figcaption>
     </article>
@@ -38,5 +38,6 @@
   <article class="color-button-container">
     <button class="color-button">New Palette</button>
   </article>
+  <script src="main.js"></script>
 </body>
 </html>
