Add unlocked icon to color boxes

--- a/index.html
+++ b/index.html
@@ -13,28 +13,7 @@
   <header>
     <h1>COLORANDOM</h1>
   </header>
-  <main class="color-box-container">
-    <article class="color-box">
-      <figure class="color-box1"></figure>
-      <figcaption>#EA9999</figcaption>
-    </article>
-    <article>
-      <figure class="color-box2"></figure>
-      <figcaption>#FACB9C</figcaption>
-    </article>
-    <article>
-      <figure class="color-box3"></figure>
-      <figcaption>#FFE59A</figcaption>
-    </article>
-    <article>
-      <figure class="color-box4"></figure>
-      <figcaption>#B6D7A8</figcaption>
-    </article>
-    <article>
-      <figure class="color-box5"></figure>
-      <figcaption>#A4C4CA</figcaption>
-    </article>
-  </main>
+  <main class="color-box-container"></main>
   <article class="color-button-container">
     <button class="color-button">New Palette</button>
   </article>
