Add functionality to save color palettes

--- a/index.html
+++ b/index.html
@@ -17,54 +17,11 @@
   <article class="color-button-container">
     <button class="color-button">New Palette</button>
     <button class="save-button">Save Palette</button>
-</article>
+  </article>
   <nav class="saved-palettes-panel">
-  <h2 class="saved-palettes-text">Saved Palettes</h2>
-  <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
-    <aside>
-      <figure class="mini-color-box"></figure>
-    </aside>
+    <h2 class="saved-palettes-text">Saved Palettes</h2>
+    <aside class="saved-palettes-container"></aside>
+    <p class="no-saved-palettes-msg">No saved palettes yet!</p>
   </nav>
   <script src="main.js"></script>
 </body>
